[package]
name = "addon-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = {version="2", features=["async"]}
napi-derive = "2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "1"
